<resources>
    <string name="app_name">WSBApp3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_today_s_route">View today\'s route</string>
    <string name="scan_tickets_and_jackets">Scan tickets and jackets</string>
    <string name="passenger_information">View onboard passenger information</string>
    <string name="information_and_advice_for_drivers">Information and advice for drivers</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign out</string>
    <string name="enter_ticket_code">Enter Ticket Code</string>
    <string name="or_manually">Or manually:</string>
    <string name="scan_bus_ticket">Scan Bus Ticket</string>
    <string name="enter_jacket_id">Enter Jacket ID</string>
    <string name="bus_stop_name">Bus Stop Name</string>
    <string name="bus_stop_address">bus stop address</string>
    <string name="child_name">Child Name</string>
    <string name="childid">childId</string>
    <string name="scan_jacket_code">Scan Jacket Code</string>
    <string name="route_bus_stops">Route Bus Stops</string>
    <string name="date">date</string>
    <string name="expand_stops_to_view_bookings">Expand stops to view bookings.</string>
    <string name="text">text</string>
    <string name="home_screen">home screen</string>
    <string name="info_fragment">INFO FRAGMENT</string>
    <string name="onboard_passengers">Onboard Passengers</string>
    <string name="today_s_route">Today\'s Route</string>
    <string name="route_info">Route info</string>
    <string name="view_bus_stops">View Bus Stops</string>
    <string name="view_passengers">View Passengers</string>
    <string name="scan_new_ticket">Scan New Ticket</string>
    <string name="menu_item">MENU ITEM</string>
    <string name="where_do_i_find_these">Where do I find these?</string>
    <string name="log_in">Log in</string>
    <string name="please_enter_your_credentials_as_provided_by_the_organiser">Please enter your credentials, as provided by the organiser.</string>
    <string name="driver_login">Driver Login</string>
    <string name="wsb_app">WSB App</string>
    <string name="logo">logo\n</string>
    <string name="title_activity_scanner">ScannerActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="none">None</string>
    <string name="medical_notes">Medical Notes</string>
    <string name="status_visibility">Status visibility:</string>
    <string name="status_update">Status Update</string>
</resources>