<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="?android:attr/borderlessButtonStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="0dp"
    android:background="@color/yellow">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foregroundGravity="center_vertical"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:context=".LoginActivity">

        <ImageView
            android:id="@+id/WSBLogo"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="36dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/walkingbuslogo"
            android:contentDescription="@string/logo" />


        <TextView
            android:id="@+id/WSBApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/wsb_app"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/WSBLogo" />

        <TextView
            android:id="@+id/DriverLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/driver_login"
            android:layout_marginHorizontal="20dp"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/WSBApp" />


        <TextView
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="20dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/please_enter_your_credentials_as_provided_by_the_organiser"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DriverLogin" />


        <EditText
            android:inputType="textEmailAddress"
            android:autofillHints="false"
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/outlined_white"
            android:paddingHorizontal="20dp"
            android:hint="Username"
            app:expandedHintEnabled="true"
            app:hintTextAppearance="@font/montserrat_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info" />

        <EditText
            android:inputType="textPassword"
            android:autofillHints="false"
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/outlined_white"
            android:paddingHorizontal="20dp"

            android:hint="Password"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="307dp"
            app:boxStrokeWidth="2dp"
            app:boxStrokeColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etUsername" />

        <TextView
            android:id="@+id/help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat"
            android:gravity="right"
            android:text="@string/where_do_i_find_these"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.975"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPassword"
            tools:ignore="RtlHardcoded" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/logIn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/orange_button"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/log_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/help" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>