<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context= ".HomeFragment"
    android:background="@color/lightBlue">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/RouteButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/yellow_button"
        android:clickable="true"
        android:padding="2dp"
        app:layout_constraintBottom_toTopOf="@id/ScanButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/mapicon"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:src="@drawable/maps"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/RouteButton"
            app:layout_constraintRight_toLeftOf="@id/maptext"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/maptext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingHorizontal="40dp"
            android:text="@string/view_today_s_route"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/mapicon"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ScanButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/yellow_button"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/RouteButton"
        app:layout_constraintBottom_toTopOf="@id/PassengersButton">

        <ImageView
            android:id="@+id/scanicon"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:src="@drawable/scanner"
            app:layout_constraintBottom_toBottomOf="@id/ScanButton"
            app:layout_constraintLeft_toLeftOf="@id/ScanButton"
            app:layout_constraintRight_toLeftOf="@id/scantext"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/scantext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingHorizontal="40dp"
            android:text="@string/scan_tickets_and_jackets"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/scanicon"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/PassengersButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/yellow_button"
        android:clickable="true"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@id/InfoButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ScanButton">

        <ImageView
            android:id="@+id/passengersicon"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:src="@drawable/passengers"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/passengerstext"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/passengerstext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingHorizontal="40dp"
            android:text="@string/passenger_information"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/passengersicon"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/InfoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/yellow_button"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@id/SettingsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/PassengersButton">

        <ImageView
            android:id="@+id/infoicon"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:src="@drawable/info"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/infotext"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/infotext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingHorizontal="40dp"
            android:text="@string/information_and_advice_for_drivers"
            android:textSize="20sp"
            android:fontFamily="@font/montserrat_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/infoicon"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/SettingsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/yellow_button"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@id/SignoutButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/InfoButton">

        <ImageView
            android:id="@+id/settingsicon"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:src="@drawable/settings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/settingstext"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/settingstext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingHorizontal="40dp"
            android:text="@string/settings"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/settingsicon"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/SignoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/dark_blue_button"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SettingsButton">


        <TextView
            android:id="@+id/signout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="40dp"
            android:text="@string/sign_out"
            android:textSize="20sp"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
